--- a/Facecare/src/index.html
+++ b/Facecare/src/index.html
@@ -1,13 +1,34 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
+
 <head>
-  <meta charset="utf-8">
+  <!-- Required Meta Tags Always Come First -->
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
+
+  <!-- Title -->
   <title>Facecare</title>
-  <base href="/">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
+
+  <!-- Favicon -->
+  <link rel="shortcut icon" href="./assets/img/facecare-favicon.png" />
+
+  <!-- Font -->
+  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap" rel="stylesheet" />
+  <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet" />
+
+  <!-- CSS Unify Template -->
+  <link rel="stylesheet" href="./assets/css/theme.min.css" />
+  <link rel="stylesheet" href="./assets/css/bootstrap-icons/bootstrap-icons.css">
+  <!-- CSS Implementing Plugins -->
 </head>
+
 <body>
   <app-root></app-root>
+
+  <!-- JS Global Compulsory -->
+  <script src="./assets/js/bootstrap/bootstrap.bundle.min.js"></script>
+
+  <!-- JS Unify -->
 </body>
+
 </html>
